# hse-python-final-project

./: .gitignore
final_project/: .dockerignore  .env.docker.example  .env.example  Dockerfile  Documentation.md  alembic.ini  demo_setup.py  docker-compose.yml  pyproject.toml  requirements.txt
final_project/alembic/: env.py
final_project/alembic/versions/: 5e7ed52ad806_init_schema.py  6e73b57f59bf_add_ends_at_column_to_events.py
final_project/docs/: bot_commands.md  demo_setup_pg.py  domain_model.md  hackathon_config.example.json
final_project/src/hackathon_assistant/domain/: models.py
final_project/src/hackathon_assistant/infra/: cli.py  cli_finish_hackathon.py  db.py  main.py  repositories.py  settings.py  usecase_provider.py
final_project/src/hackathon_assistant/use_cases/: __init__.py  base.py  create_hackathon.py  dto.py  finish_hackathon.py  get_admin_stats.py  get_faq.py  (+13 more)
final_project/tests/: conftest.py
final_project/tests/adapters/: conftest.py  test_bot_formatters.py  test_bot_helpers.py  test_bot_routers.py
final_project/tests/domain/: conftest.py  test_enums.py  test_models.py
final_project/tests/infra/: test_cli.py  test_db.py
final_project/tests/use_cases/: conftest.py  test_create_hackathon.py  test_finish_hackathon.py  test_get_admin_stats.py  test_get_faq.py  test_get_hackathon_info.py  test_get_rules.py  test_get_schedule.py  test_list_hackathons.py  test_process_reminder.py  test_select_hackathon.py  test_send_broadcast.py  test_send_reminder.py  test_start_user.py  test_subscribe_notifications.py  test_unsubscribe_notifications.py
(+20 files in other folders)
